New webhook functionality in the common library
Added Webhook client in the common library:
 - New APIs for webhhok config, attach and send.

Signed-off-by: Tzvetomir Stoyanov (VMware) <tz.stoyanov@gmail.com>

--- a/app/shaft/CMakeLists.txt
+++ b/app/shaft/CMakeLists.txt
@@ -68,6 +68,7 @@ target_sources(herak_common INTERFACE
   ${PROJECT_LIB_DIR}/common/bt.c
   ${PROJECT_LIB_DIR}/common/log.c
   ${PROJECT_LIB_DIR}/common/time.c
+  ${PROJECT_LIB_DIR}/common/webhook.c
   ${PROJECT_LIB_DIR}/common/temperature.cpp
 )
 target_include_directories(herak_common INTERFACE ${PROJECT_INLUDE_DIR})
