--- a/app/solar/CMakeLists.txt
+++ b/app/solar/CMakeLists.txt
@@ -84,6 +84,7 @@ target_sources(herak_common INTERFACE
   ${PROJECT_LIB_DIR}/common/bt.c
   ${PROJECT_LIB_DIR}/common/log.c
   ${PROJECT_LIB_DIR}/common/time.c
+  ${PROJECT_LIB_DIR}/common/webhook.c
   ${PROJECT_LIB_DIR}/common/temperature.cpp
   ${COMMON_USB}
 )
