--- a/app/solar/CMakeLists.txt
+++ b/app/solar/CMakeLists.txt
@@ -64,6 +64,7 @@ add_executable(${PROJECT_NAME}
   ${CMAKE_CURRENT_LIST_DIR}/main.c
   ${MPTT_TEST}
 )
+target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra)
 
 target_include_directories(${PROJECT_NAME} PRIVATE
 			   ${CMAKE_CURRENT_LIST_DIR}
@@ -90,6 +91,7 @@ target_sources(herak_common INTERFACE
   ${COMMON_USB}
 )
 target_include_directories(herak_common INTERFACE ${PROJECT_INLUDE_DIR})
+target_compile_options(herak_common INTERFACE -Wall -Wextra)
 
 add_library(one_wire INTERFACE)
 target_sources(one_wire INTERFACE
