Add one-wire library as submodule
Instead of copying manually the one-wire library files, add it as a
sub-module.

Signed-off-by: Tzvetomir Stoyanov <tz.stoyanov@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libs/pio-usb"]
 	path = libs/pio-usb
 	url = https://github.com/sekigon-gonnoc/Pico-PIO-USB
+[submodule "libs/one-wire"]
+	path = libs/one-wire
+	url = https://github.com/adamboardman/pico-onewire
