--- a/app/solar/CMakeLists.txt
+++ b/app/solar/CMakeLists.txt
@@ -43,6 +43,7 @@ add_custom_command(OUTPUT "${CMAKE_CURRENT_LIST_DIR}/${PARAMS_FILE}.c" "${PROJEC
 # Creates a pico-sdk subdirectory in our project for the libraries
 pico_sdk_init()
 include(${PROJECT_TOP_DIR}/libs/pio-usb/CMakeLists.txt)
+include(${PROJECT_TOP_DIR}/libs/one-wire/CMakeLists.txt)
 
 if(${TEST_BUILD})
 	set(MPTT_TEST ${CMAKE_CURRENT_LIST_DIR}/mppt_voltronic_test.c)
@@ -72,6 +73,7 @@ target_include_directories(${PROJECT_NAME} PRIVATE
 			   ${PROJECT_INLUDE_DIR}
 			   ${INLUDE_USB}
 			   ${PROJECT_LIB_DIR}/pio-usb/src
+			   ${PROJECT_LIB_DIR}/one-wire/api
 )
 
 # Create map/bin/hex/uf2 files
@@ -95,12 +97,6 @@ target_sources(herak_common INTERFACE
 target_include_directories(herak_common INTERFACE ${PROJECT_INLUDE_DIR})
 target_compile_options(herak_common INTERFACE -Wall -Wextra)
 
-add_library(one_wire INTERFACE)
-target_sources(one_wire INTERFACE
-  ${PROJECT_LIB_DIR}/one-wire/one_wire.cpp
-)
-target_include_directories(one_wire INTERFACE ${PROJECT_INLUDE_DIR})
-
 add_library(pico_hd44780 INTERFACE)
 target_sources(pico_hd44780 INTERFACE
   ${PROJECT_LIB_DIR}/hd44780/HD44780_LCD_PCF8574.cpp
@@ -108,10 +104,10 @@ target_sources(pico_hd44780 INTERFACE
 )
 target_include_directories(pico_hd44780 INTERFACE ${PROJECT_INLUDE_DIR})
 
-target_link_libraries(${PROJECT_NAME} ${TINY_USB_HOST} ${TINY_USB_BOARD} pico_stdlib hardware_i2c pico_hd44780 one_wire
+target_link_libraries(${PROJECT_NAME} ${TINY_USB_HOST} ${TINY_USB_BOARD} pico_stdlib hardware_i2c pico_hd44780
 		      hardware_rtc hardware_adc pico_btstack_base pico_btstack_ble pico_btstack_classic
 		      pico_btstack_cyw43 pico_cyw43_arch_lwip_threadsafe_background
-		      pico_lwip_sntp pico_lwip_mqtt herak_common pico_pio_usb)
+		      pico_lwip_sntp pico_lwip_mqtt herak_common pico_pio_usb pico_one_wire)
 
 # Enable usb output, disable uart output
 if(${TEST_BUILD})
