--- a/app/shaft/CMakeLists.txt
+++ b/app/shaft/CMakeLists.txt
@@ -41,7 +41,12 @@ add_custom_command(OUTPUT "${CMAKE_CURRENT_LIST_DIR}/${PARAMS_FILE}.c" "${PROJEC
 
 # Creates a pico-sdk subdirectory in our project for the libraries
 pico_sdk_init()
-include(${PROJECT_TOP_DIR}/libs/one-wire/CMakeLists.txt)
+
+#build required libraries
+include(${PROJECT_LIB_DIR}/pio-usb/CMakeLists.txt)
+include(${PROJECT_LIB_DIR}/one-wire/CMakeLists.txt)
+include(${PROJECT_LIB_DIR}/common/CMakeLists.txt)
+
 
 # Tell CMake where to find the executable source file
 add_executable(${PROJECT_NAME}
@@ -51,31 +56,17 @@ add_executable(${PROJECT_NAME}
   ${CMAKE_CURRENT_LIST_DIR}/main.c
 )
 target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra)
+
 target_include_directories(${PROJECT_NAME} PRIVATE
 			   ${CMAKE_CURRENT_LIST_DIR}
 			   ${PROJECT_INLUDE_DIR}
+			   ${PROJECT_LIB_DIR}/pio-usb/src
 			   ${PROJECT_LIB_DIR}/one-wire/api
+			   ${PROJECT_LIB_DIR}/common/api
 )
 
 # Create map/bin/hex/uf2 files
 pico_add_extra_outputs(${PROJECT_NAME})
-
-add_library(herak_common INTERFACE)
-target_sources(herak_common INTERFACE
-  ${PROJECT_LIB_DIR}/common/base64.c
-  ${PROJECT_LIB_DIR}/common/system.c
-  ${PROJECT_LIB_DIR}/common/system_weak.c
-  ${PROJECT_LIB_DIR}/common/lcd.cpp
-  ${PROJECT_LIB_DIR}/common/wifi.c
-  ${PROJECT_LIB_DIR}/common/mqtt_client.c
-  ${PROJECT_LIB_DIR}/common/bt.c
-  ${PROJECT_LIB_DIR}/common/log.c
-  ${PROJECT_LIB_DIR}/common/time.c
-  ${PROJECT_LIB_DIR}/common/webhook.c
-  ${PROJECT_LIB_DIR}/common/temperature.cpp
-)
-target_include_directories(herak_common INTERFACE ${PROJECT_INLUDE_DIR})
-target_compile_options(herak_common INTERFACE -Wall -Wextra)
 
 add_library(pico_hd44780 INTERFACE)
 target_sources(pico_hd44780 INTERFACE
@@ -84,11 +75,10 @@ target_sources(pico_hd44780 INTERFACE
 )
 target_include_directories(pico_hd44780 INTERFACE ${PROJECT_INLUDE_DIR})
 
-# Pull in pico libraries that we need
-target_link_libraries(${PROJECT_NAME} pico_stdlib hardware_i2c pico_hd44780
+target_link_libraries(${PROJECT_NAME} pico_stdlib hardware_i2c
 		      hardware_rtc hardware_adc pico_btstack_base pico_btstack_ble pico_btstack_classic
-		      pico_btstack_cyw43 pico_cyw43_arch_lwip_threadsafe_background
-		      pico_lwip_sntp pico_lwip_mqtt herak_common pico_one_wire)
+		      pico_btstack_cyw43 pico_cyw43_arch_lwip_threadsafe_background pico_lwip_sntp
+		      pico_lwip_mqtt pico_hd44780 herak_common pico_pio_usb pico_one_wire)
 
 # Enable usb output, disable uart output
 pico_enable_stdio_usb(${PROJECT_NAME} 1)
