Add local Cmake file in the LCD library library
Build the external LCD library using its own Cmake file. This approach is more
flexible and the build process is straightforward.

Signed-off-by: Tzvetomir Stoyanov <tz.stoyanov@gmail.com>

--- a/app/solar/CMakeLists.txt
+++ b/app/solar/CMakeLists.txt
@@ -46,6 +46,7 @@ pico_sdk_init()
 #build required libraries
 include(${PROJECT_LIB_DIR}/pio-usb/CMakeLists.txt)
 include(${PROJECT_LIB_DIR}/one-wire/CMakeLists.txt)
+include(${PROJECT_LIB_DIR}/hd44780/CMakeLists.txt)
 include(${PROJECT_LIB_DIR}/common/CMakeLists.txt)
 
 if(${ADD_USB})
@@ -76,18 +77,12 @@ target_include_directories(${PROJECT_NAME} PRIVATE
 			   ${INLUDE_USB}
 			   ${PROJECT_LIB_DIR}/pio-usb/src
 			   ${PROJECT_LIB_DIR}/one-wire/api
+			   ${PROJECT_LIB_DIR}/hd44780/api
 			   ${PROJECT_LIB_DIR}/common/api
 )
 
 # Create map/bin/hex/uf2 files
 pico_add_extra_outputs(${PROJECT_NAME})
-
-add_library(pico_hd44780 INTERFACE)
-target_sources(pico_hd44780 INTERFACE
-  ${PROJECT_LIB_DIR}/hd44780/HD44780_LCD_PCF8574.cpp
-  ${PROJECT_LIB_DIR}/hd44780/HD44780_LCD_PCF8574_Print.cpp
-)
-target_include_directories(pico_hd44780 INTERFACE ${PROJECT_INLUDE_DIR})
 
 target_link_libraries(${PROJECT_NAME} ${TINY_USB_HOST} ${TINY_USB_BOARD} pico_stdlib hardware_i2c
 		      hardware_rtc hardware_adc pico_btstack_base pico_btstack_ble pico_btstack_classic
