--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,57 +7,29 @@ on:
     - cron:  '0 15 * * THU'
   workflow_dispatch:
 
-env:
-  PICO_SDK_VER: 1.5.1
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Build-fixed
+    - name: Build
       working-directory: ${{runner.workspace}}/
       shell: bash
       run: |
         sudo apt-get update
         sudo apt-get install build-essential git cmake binutils-dev -y
         sudo apt install gcc-arm-none-eabi libnewlib-arm-none-eabi libstdc++-arm-none-eabi-newlib -y
-        git clone --depth 1 --recurse-submodules --branch $PICO_SDK_VER https://github.com/raspberrypi/pico-sdk pico-sdk-$PICO_SDK_VER
-        export PICO_SDK_PATH=${{runner.workspace}}/pico-sdk-$PICO_SDK_VER 
         cd ${{runner.workspace}}/herak-raspberry/
         git submodule update --init --recursive
         cp -f ${{runner.workspace}}/herak-raspberry/scripts/params_ci.txt /${{runner.workspace}}/herak-raspberry/app/solar/params.txt
-        mkdir ${{runner.workspace}}/herak-raspberry/build/solar-$PICO_SDK_VER
-        cd ${{runner.workspace}}/herak-raspberry/build/solar-$PICO_SDK_VER
+        mkdir ${{runner.workspace}}/herak-raspberry/build/solar-ci
+        cd ${{runner.workspace}}/herak-raspberry/build/solar-ci
         cmake ../../app/solar
         make
-        ls -al ${{runner.workspace}}/herak-raspberry/build/solar-$PICO_SDK_VER/herak-solar.uf2
+        ls -al ${{runner.workspace}}/herak-raspberry/build/solar-ci/herak-solar.uf2
         cp -f ${{runner.workspace}}/herak-raspberry/scripts/params_ci.txt /${{runner.workspace}}/herak-raspberry/app/shaft/params.txt
-        mkdir ${{runner.workspace}}/herak-raspberry/build/shaft-$PICO_SDK_VER
-        cd ${{runner.workspace}}/herak-raspberry/build/shaft-$PICO_SDK_VER
+        mkdir ${{runner.workspace}}/herak-raspberry/build/shaft-ci
+        cd ${{runner.workspace}}/herak-raspberry/build/shaft-ci
         cmake ../../app/shaft
         make
-        ls -al ${{runner.workspace}}/herak-raspberry/build/shaft-$PICO_SDK_VER/herak-shaft.uf2
-    - name: Build-latest
-      working-directory: ${{runner.workspace}}/
-      shell: bash
-      run: |
-        sudo apt-get update
-        sudo apt-get install build-essential git cmake binutils-dev -y
-        sudo apt install gcc-arm-none-eabi libnewlib-arm-none-eabi libstdc++-arm-none-eabi-newlib -y
-        git clone --depth 1 --recurse-submodules https://github.com/raspberrypi/pico-sdk pico-sdk-latest
-        export PICO_SDK_PATH=${{runner.workspace}}/pico-sdk-latest
-        cd ${{runner.workspace}}/herak-raspberry/
-        git submodule update --init --recursive
-        cp -f ${{runner.workspace}}/herak-raspberry/scripts/params_ci.txt /${{runner.workspace}}/herak-raspberry/app/solar/params.txt
-        mkdir ${{runner.workspace}}/herak-raspberry/build/solar-latest
-        cd ${{runner.workspace}}/herak-raspberry/build/solar-latest
-        cmake ../../app/solar
-        make
-        ls -al ${{runner.workspace}}/herak-raspberry/build/solar-latest/herak-solar.uf2
-        cp -f ${{runner.workspace}}/herak-raspberry/scripts/params_ci.txt /${{runner.workspace}}/herak-raspberry/app/shaft/params.txt
-        mkdir ${{runner.workspace}}/herak-raspberry/build/shaft-latest
-        cd ${{runner.workspace}}/herak-raspberry/build/shaft-latest
-        cmake ../../app/shaft
-        make
-        ls -al ${{runner.workspace}}/herak-raspberry/build/shaft-latest/herak-shaft.uf2
+        ls -al ${{runner.workspace}}/herak-raspberry/build/shaft-ci/herak-shaft.uf2
