--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
         sudo apt install gcc-arm-none-eabi libnewlib-arm-none-eabi libstdc++-arm-none-eabi-newlib -y
         cd ${{runner.workspace}}/herak-raspberry/
         git submodule update --init --recursive
+        ./scripts/apply_patches.sh
         cp -f ${{runner.workspace}}/herak-raspberry/scripts/params_ci.txt /${{runner.workspace}}/herak-raspberry/app/solar/params.txt
         mkdir ${{runner.workspace}}/herak-raspberry/build/solar-ci
         cd ${{runner.workspace}}/herak-raspberry/build/solar-ci
