--- a/app/solar/CMakeLists.txt
+++ b/app/solar/CMakeLists.txt
@@ -12,6 +12,7 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 set(PICO_BOARD pico_w)
 set(ADD_USB true)
+set(DEBUG_BUILD false)
 
 add_compile_definitions(CYW43_HOST_NAME=\"${PROJECT_NAME}\")
 
@@ -70,6 +71,12 @@ add_executable(${PROJECT_NAME}
   ${CMAKE_CURRENT_LIST_DIR}/main.c
   ${MPTT_TEST}
 )
+
+if(${DEBUG_BUILD})
+	set(CMAKE_BUILD_TYPE "Debug")
+	target_compile_options(${PROJECT_NAME} PRIVATE -DPARAM_ASSERTIONS_ENABLE_ALL=1 -DPICO_CYW43_ARCH_DEBUG_ENABLED)
+endif()
+
 target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra)
 
 target_include_directories(${PROJECT_NAME} PRIVATE
