--- a/app/shaft/CMakeLists.txt
+++ b/app/shaft/CMakeLists.txt
@@ -80,6 +80,8 @@ target_link_libraries(${PROJECT_NAME} pico_stdlib hardware_i2c
 		      pico_btstack_cyw43 pico_cyw43_arch_lwip_threadsafe_background pico_lwip_sntp
 		      pico_lwip_mqtt pico_hd44780 herak_common pico_pio_usb pico_one_wire)
 
+target_link_options(${PROJECT_NAME} PRIVATE -Xlinker --print-memory-usage)
+
 # Enable usb output, disable uart output
 pico_enable_stdio_usb(${PROJECT_NAME} 1)
 pico_enable_stdio_uart(${PROJECT_NAME} 0)
