Implement HTTP debug APIs
Implement new debug functionality, using the HTTP server. These HTTP GET
requests can be used to get the device status, reboot the device,
enable / disable debug logs, send logs over HTTP:
  /debug?reboot:<delay_ms>
  /debug?status
  /debug?periodic_log:<delay_ms>
  /debug?log_on
  /debug?log_off
  /debug?reset
  /debug?verbose:<level_hex>:all|log|mqtt|usb|wifi|bt
  /debug?help

Signed-off-by: Tzvetomir Stoyanov <tz.stoyanov@gmail.com>

--- a/libs/common/CMakeLists.txt
+++ b/libs/common/CMakeLists.txt
@@ -19,6 +19,7 @@ target_sources(${lib_name} INTERFACE
    ${dir}/time.c
    ${dir}/webhook.c
    ${dir}/webserv.c
+   ${dir}/webdebug.c
    ${dir}/temperature.cpp
    ${COMMON_USB}
 )
