Add common library APIs for manchester encoding
Manchester encoding is used for communication protocol between IoT
devices.

Signed-off-by: Tzvetomir Stoyanov <tz.stoyanov@gmail.com>

--- a/libs/common/CMakeLists.txt
+++ b/libs/common/CMakeLists.txt
@@ -21,6 +21,7 @@ target_sources(${lib_name} INTERFACE
    ${dir}/webserv.c
    ${dir}/webdebug.c
    ${dir}/temperature.cpp
+   ${dir}/manchester_code.c
    ${COMMON_USB}
 )
 
