Irrigation: change the name of default target
Changed the name of the default target to be more generic.

Signed-off-by: Tzvetomir Stoyanov <tz.stoyanov@gmail.com>

--- a/app/irrig/CMakeLists.txt
+++ b/app/irrig/CMakeLists.txt
@@ -8,7 +8,7 @@ set(PICO_BOARD pico_w)
 include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
 
 # Set name of project (as PROJECT_NAME) and C/C++ standards
-project(herak-gogo-irrig C CXX ASM)
+project(herak-irrig C CXX ASM)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 set(DEBUG_BUILD false)
