Refactor commands handlers
The existing logic for registering and executing custom commands is
designed to be used with the web server. The server runs registered
command when an http request is received. In order to reuse that logic
with MQTT, the code is refactored. A new command execution context is
introduced, which allows to add support for more command triggers.

Signed-off-by: Tzvetomir Stoyanov <tz.stoyanov@gmail.com>

--- a/app/boiler/CMakeLists.txt
+++ b/app/boiler/CMakeLists.txt
@@ -55,7 +55,7 @@ add_executable(${PROJECT_NAME}
 #  ${CMAKE_CURRENT_LIST_DIR}/mqtt_boiler.c
   ${CMAKE_CURRENT_LIST_DIR}/opentherm_pio.c
   ${CMAKE_CURRENT_LIST_DIR}/opentherm_cmd.c
-  ${CMAKE_CURRENT_LIST_DIR}/opentherm_web.c
+  ${CMAKE_CURRENT_LIST_DIR}/cmd_boiler.c
   ${CMAKE_CURRENT_LIST_DIR}/mqtt_boiler.c
   ${CMAKE_CURRENT_LIST_DIR}/main.c
 )
