--- a/libs/common/CMakeLists.txt
+++ b/libs/common/CMakeLists.txt
@@ -10,6 +10,7 @@ endif()
 target_sources(${lib_name} INTERFACE
    ${dir}/base64.c
    ${dir}/system.c
+   ${dir}/sys_utils.c
    ${dir}/system_weak.c
    ${dir}/lcd.cpp
    ${dir}/wifi.c
