Add support for SHT20 sensor
SHT20 is temperature and humidity sensor, using I2C bus for
communication.

Signed-off-by: Tzvetomir Stoyanov <tz.stoyanov@gmail.com>

--- a/libs/common/devices/CMakeLists.txt
+++ b/libs/common/devices/CMakeLists.txt
@@ -8,7 +8,8 @@ target_include_directories(${lib_name} INTERFACE ${CMAKE_CURRENT_LIST_DIR})
 
 include(${CMAKE_CURRENT_LIST_DIR}/ssr/CMakeLists.txt)
 include(${CMAKE_CURRENT_LIST_DIR}/soil/CMakeLists.txt)
+include(${CMAKE_CURRENT_LIST_DIR}/sht20/CMakeLists.txt)
 include(${CMAKE_CURRENT_LIST_DIR}/opentherm/CMakeLists.txt)
 
-# enable all warnings
+# enable all warningss
 target_compile_options(${lib_name} INTERFACE -Wall -Wextra)
