--- a/app/shaft/CMakeLists.txt
+++ b/app/shaft/CMakeLists.txt
@@ -7,6 +7,12 @@ set(ENV{PICO_SDK_PATH} "${PROJECT_LIB_DIR}/pico-sdk")
 set(PICO_BOARD pico_w)
 include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
 
+
+# Select the modules used in this application. ON / OFF
+option(ADD_SSR "Solid State Relays" ON)         # libs/common/devices/ssr/README.md
+option(ADD_SOIL "Soil sensor" ON)               # libs/common/devices/soil/README.md
+option(ADD_SHT20 "SHT20 sensor" ON)             # libs/common/devices/sht20/README.md
+
 # Set name of project (as PROJECT_NAME) and C/C++ standards
 project(herak-shaft C CXX ASM)
 set(CMAKE_C_STANDARD 11)
@@ -18,42 +24,30 @@ add_compile_definitions(CYW43_HOST_NAME=\"${PROJECT_NAME}\")
 
 set(PROJECT_TOP_DIR ${CMAKE_CURRENT_LIST_DIR}/../..)
 set(PROJECT_INLUDE_DIR ${CMAKE_CURRENT_LIST_DIR}/../../include)
-set(PARAMS_FILE params)
-set(PARAMS_TEMPLETE ${PROJECT_TOP_DIR}/app/params_example)
 
-add_custom_target( check-params
-  COMMAND test -e ${CMAKE_CURRENT_LIST_DIR}/${PARAMS_FILE}.txt ||
-		  echo "File ${CMAKE_CURRENT_LIST_DIR}/${PARAMS_FILE}.txt does not exist"
-  COMMAND test -e ${CMAKE_CURRENT_LIST_DIR}/${PARAMS_FILE}.txt ||
-  		echo "Please, copy ${PARAMS_TEMPLETE}.txt as\
-			${CMAKE_CURRENT_LIST_DIR}/${PARAMS_FILE}.txt and modify it with your settings."
-  COMMAND test -e ${CMAKE_CURRENT_LIST_DIR}/${PARAMS_FILE}.txt
-  COMMENT "Checking if ${CMAKE_CURRENT_LIST_DIR}/${PARAMS_FILE}.txt exists..."
+
+# Set params file
+set(PARAMS_FILE ${CMAKE_CURRENT_LIST_DIR}/params.txt)
+set(PARAMS_TEMPLETE ${PROJECT_TOP_DIR}/app/params_example.txt)
+if(NOT EXISTS "${PARAMS_FILE}")
+  message(WARNING "File ${PARAMS_FILE} does not exist.")
+  message(FATAL_ERROR
+    "Please, copy ${PARAMS_TEMPLETE} as ${PARAMS_FILE} and modify it with your settings.")
+endif()
+execute_process(
+	COMMAND cp "${PARAMS_FILE}" ${CMAKE_BINARY_DIR}
+	WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
 )
-
-add_custom_target( clear-params
-  COMMAND rm -f "${CMAKE_CURRENT_LIST_DIR}/${PARAMS_FILE}.c" "${PROJECT_INLUDE_DIR}/${PARAMS_FILE}.h"
-  COMMENT "Removing old ${PARAMS_FILE} artifacts..."
-)
-
-add_custom_command(OUTPUT "${CMAKE_CURRENT_LIST_DIR}/${PARAMS_FILE}.c" "${PROJECT_INLUDE_DIR}/${PARAMS_FILE}.h"
-    COMMAND "${PROJECT_TOP_DIR}/scripts/params_crypt.sh" "${CMAKE_CURRENT_LIST_DIR}/${PARAMS_FILE}" "${PROJECT_TOP_DIR}/scripts/params_all.txt"
-    COMMAND mv ${CMAKE_CURRENT_LIST_DIR}/${PARAMS_FILE}.h ${PROJECT_INLUDE_DIR}/${PARAMS_FILE}.h
-    COMMENT "Generating ${PARAMS_FILE} code ..."
-    DEPENDS check-params clear-params)
 
 # Creates a pico-sdk subdirectory in our project for the libraries
 pico_sdk_init()
 
 #build required libraries
-include(${PROJECT_LIB_DIR}/pio-usb/CMakeLists.txt)
-include(${PROJECT_LIB_DIR}/one-wire/CMakeLists.txt)
-include(${PROJECT_LIB_DIR}/hd44780/CMakeLists.txt)
 include(${PROJECT_LIB_DIR}/common/CMakeLists.txt)
+include(${PROJECT_LIB_DIR}/one-wire/CMakeLists.txt)
 
 # Tell CMake where to find the executable source file
 add_executable(${PROJECT_NAME}
-  ${CMAKE_CURRENT_LIST_DIR}/${PARAMS_FILE}.c
   ${CMAKE_CURRENT_LIST_DIR}/sonar.c
   ${CMAKE_CURRENT_LIST_DIR}/mqtt_shaft.c
   ${CMAKE_CURRENT_LIST_DIR}/main.c
@@ -83,7 +77,3 @@ target_link_libraries(${PROJECT_NAME} pico_stdlib hardware_i2c
 		      pico_lwip_mqtt pico_hd44780 herak_common pico_pio_usb pico_one_wire)
 
 target_link_options(${PROJECT_NAME} PRIVATE -Xlinker --print-memory-usage)
-
-# Enable usb output, disable uart output
-pico_enable_stdio_usb(${PROJECT_NAME} 1)
-pico_enable_stdio_uart(${PROJECT_NAME} 0)
