Add support for HD44780 LCD
Added support for external HD44780 LCD, attached to I2C buss.

Signed-off-by: Tzvetomir Stoyanov <tz.stoyanov@gmail.com>

--- a/app/common/CMakeLists.txt
+++ b/app/common/CMakeLists.txt
@@ -8,6 +8,7 @@ option(ADD_SSR "Solid State Relays" ON)		# libs/common/devices/ssr/README.md
 option(ADD_SOIL "Soil sensor" ON)		# libs/common/devices/soil/README.md
 option(ADD_SHT20 "SHT20 sensor" ON)		# libs/common/devices/sht20/README.md
 option(ADD_OPENTHERM "OneTherm device" ON)	# libs/common/devices/opentherm/README.md
+option(ADD_LCD "LCD HD44780" ON)		# libs/common/devices/lcd/README.md
 
 # CMake settings
 set(CMAKE_C_STANDARD 11)
