--- a/libs/common/devices/CMakeLists.txt
+++ b/libs/common/devices/CMakeLists.txt
@@ -20,6 +20,10 @@ if(ADD_OPENTHERM)
 include(${CMAKE_CURRENT_LIST_DIR}/opentherm/CMakeLists.txt)
 endif()
 
+if(ADD_LCD)
+include(${CMAKE_CURRENT_LIST_DIR}/lcd/CMakeLists.txt)
+endif()
+
 target_sources(${lib_name} INTERFACE
    ${CMAKE_CURRENT_LIST_DIR}/devices_init.c
 )
