Add infrastructure for service modules
Services are implemented as part of herak common library. Currently the
library builds all available services, although not all of them are used
by all applications. Added initial infrastructure to move services
implementation as system modules. System modules are more flexible, as they
can be easily added / removed from the build.

Signed-off-by: Tzvetomir Stoyanov <tz.stoyanov@gmail.com>

--- a/libs/common/CMakeLists.txt
+++ b/libs/common/CMakeLists.txt
@@ -46,15 +46,16 @@ target_sources(${lib_name} INTERFACE
 include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
 
 target_include_directories(${lib_name} INTERFACE
-                           ${dir}
-                           ${PROJECT_LIB_DIR}/common/devices
-			   ${CMAKE_CURRENT_LIST_DIR}
-			   ${PROJECT_INLUDE_DIR}
-			   ${PROJECT_LIB_DIR}/pio-usb/src
-			   ${PROJECT_LIB_DIR}/common/api
+							${dir}
+							${CMAKE_CURRENT_LIST_DIR}
+							${PROJECT_INLUDE_DIR}
+							${CMAKE_CURRENT_LIST_DIR}/devices
+							${CMAKE_CURRENT_LIST_DIR}/services
+							${CMAKE_CURRENT_LIST_DIR}/api
 )
 
 include(${CMAKE_CURRENT_LIST_DIR}/devices/CMakeLists.txt)
+include(${CMAKE_CURRENT_LIST_DIR}/services/CMakeLists.txt)
 
 add_subdirectory(${PROJECT_LIB_DIR}/pio-usb  ${CMAKE_BINARY_DIR}/pio-usb)
 target_link_libraries(${lib_name} INTERFACE pico_pio_usb)
