--- a/app/shaft/CMakeLists.txt
+++ b/app/shaft/CMakeLists.txt
@@ -72,8 +72,8 @@ target_include_directories(${PROJECT_NAME} PRIVATE
 pico_add_extra_outputs(${PROJECT_NAME})
 
 target_link_libraries(${PROJECT_NAME} pico_stdlib hardware_i2c
-		      hardware_rtc hardware_adc pico_btstack_base pico_btstack_ble pico_btstack_classic
-		      pico_btstack_cyw43 pico_cyw43_arch_lwip_threadsafe_background pico_lwip_sntp
+		      hardware_rtc hardware_adc
+		      pico_cyw43_arch_lwip_threadsafe_background pico_lwip_sntp
 		      pico_lwip_mqtt herak_common pico_pio_usb)
 
 target_link_options(${PROJECT_NAME} PRIVATE -Xlinker --print-memory-usage)
