Implement MQTT service
Refactored existing MQTT support as service.

Signed-off-by: Tzvetomir Stoyanov <tz.stoyanov@gmail.com>

--- a/app/shaft/CMakeLists.txt
+++ b/app/shaft/CMakeLists.txt
@@ -14,7 +14,7 @@ option(ADD_SOIL "Soil sensor" ON)               # libs/common/devices/soil/READM
 option(ADD_SHT20 "SHT20 sensor" ON)             # libs/common/devices/sht20/README.md
 option(ADD_ONE_WIRE "OneWire" ON)
 option(ADD_LCD "LCD HD44780" ON)		# libs/common/devices/lcd/README.md
-
+option(ADD_MQTT_CLIENT "MQTT Client" ON)
 
 # Set name of project (as PROJECT_NAME) and C/C++ standards
 project(herak-shaft C CXX ASM)
@@ -74,6 +74,6 @@ pico_add_extra_outputs(${PROJECT_NAME})
 target_link_libraries(${PROJECT_NAME} pico_stdlib hardware_i2c
 		      hardware_rtc hardware_adc
 		      pico_cyw43_arch_lwip_threadsafe_background pico_lwip_sntp
-		      pico_lwip_mqtt herak_common pico_pio_usb)
+		      herak_common pico_pio_usb)
 
 target_link_options(${PROJECT_NAME} PRIVATE -Xlinker --print-memory-usage)
