--- a/app/solar/CMakeLists.txt
+++ b/app/solar/CMakeLists.txt
@@ -8,6 +8,7 @@ set(PICO_BOARD pico_w)
 
 # Select the modules used in this application. ON / OFF
 option(ADD_BT_STACK "Bluetoth Stack" ON)
+option(ADD_MQTT_CLIENT "MQTT Client" ON) 
 option(ADD_SSR "Solid State Relays" ON)         # libs/common/devices/ssr/README.md
 option(ADD_SOIL "Soil sensor" ON)               # libs/common/devices/soil/README.md
 option(ADD_SHT20 "SHT20 sensor" ON)             # libs/common/devices/sht20/README.md
@@ -44,7 +45,6 @@ execute_process(
 if(${ADD_USB})
 	set(TINY_USB_HOST tinyusb_host)
 	set(TINY_USB_BOARD tinyusb_board)
-	set(INLUDE_USB ${PROJECT_TOP_DIR}/libs/common/api/usb)
 	set(PICO_PIO_USB pico_pio_usb)
 	set(PICO_PIO_USB_PATH ${PROJECT_LIB_DIR}/pio-usb)
 else()
@@ -95,7 +95,7 @@ target_link_libraries(${PROJECT_NAME} ${TINY_USB_HOST} ${TINY_USB_BOARD} ${PICO_
 		      pico_stdlib hardware_i2c hardware_rtc hardware_adc
 		      hardware_dma hardware_pio
 		      pico_cyw43_arch_lwip_threadsafe_background
-		      pico_lwip_sntp pico_lwip_mqtt herak_common)
+		      pico_lwip_sntp herak_common)
 
 target_link_options(${PROJECT_NAME} PRIVATE -Xlinker --print-memory-usage)
 
