--- a/libs/common/devices/opentherm/CMakeLists.txt
+++ b/libs/common/devices/opentherm/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_compile_definitions(HAVE_OPENTHERM=1)
 
+option(ADD_MQTT_CLIENT "MQTT Client" ON)
+
 pico_generate_pio_header(${lib_name} ${CMAKE_CURRENT_LIST_DIR}/opentherm_dev.pio)
 
 target_sources(${lib_name} INTERFACE
