--- a/libs/common/devices/one_wire/CMakeLists.txt
+++ b/libs/common/devices/one_wire/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_compile_definitions(HAVE_ONE_WIRE=1)
 
+option(ADD_MQTT_CLIENT "MQTT Client" ON)
+
 target_sources(${lib_name} INTERFACE
   ${CMAKE_CURRENT_LIST_DIR}/one_wire_sensors.cpp
 )
