--- a/libs/common/devices/soil/CMakeLists.txt
+++ b/libs/common/devices/soil/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_compile_definitions(HAVE_SOIL=1)
 
+option(ADD_MQTT_CLIENT "MQTT Client" ON)
+
 target_sources(${lib_name} INTERFACE
   ${CMAKE_CURRENT_LIST_DIR}/soil.c
 )
