--- a/libs/common/services/mqtt/CMakeLists.txt
+++ b/libs/common/services/mqtt/CMakeLists.txt
@@ -1,12 +1,12 @@
-add_compile_definitions(HAVE_SSR=1)
-
-option(ADD_MQTT_CLIENT "MQTT Client" ON)
+add_compile_definitions(HAVE_SYS_MQTT=1)
 
 target_sources(${lib_name} INTERFACE
-  ${CMAKE_CURRENT_LIST_DIR}/ssr.c
+  ${CMAKE_CURRENT_LIST_DIR}/mqtt_client.c
 )
 
 target_include_directories(${lib_name} INTERFACE ${CMAKE_CURRENT_LIST_DIR})
+
+target_link_libraries(${lib_name} INTERFACE pico_lwip_mqtt)
 
 # enable all warnings
 target_compile_options(${lib_name} INTERFACE -Wall -Wextra)
