--- a/app/shaft/CMakeLists.txt
+++ b/app/shaft/CMakeLists.txt
@@ -64,7 +64,6 @@ target_compile_options(${PROJECT_NAME} PRIVATE -DMEM_HEAP_SIZE=${HEAP_SIZE})
 target_include_directories(${PROJECT_NAME} PRIVATE
 			   ${CMAKE_CURRENT_LIST_DIR}
 			   ${PROJECT_INLUDE_DIR}
-			   ${PROJECT_LIB_DIR}/pio-usb/src
 			   ${PROJECT_LIB_DIR}/common/api
 )
 
@@ -74,6 +73,6 @@ pico_add_extra_outputs(${PROJECT_NAME})
 target_link_libraries(${PROJECT_NAME} pico_stdlib hardware_i2c
 		      hardware_rtc hardware_adc
 		      pico_cyw43_arch_lwip_threadsafe_background pico_lwip_sntp
-		      herak_common pico_pio_usb)
+		      herak_common)
 
 target_link_options(${PROJECT_NAME} PRIVATE -Xlinker --print-memory-usage)
